--- a/Presentation.ipynb
+++ b/Presentation.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "An example of a Nolan Chart from our source mapping Donald Trump to a point at (.8,.2):\n",
     "\n",
-    "<img src=\"report_imgs/donald_trump.gif\" width=400/>\n",
+    "<img src=\"report_imgs/donald_trump.gif\" width=\"400\"/>\n",
     "\n",
     "Our problem lies somewhere between a clustering and a classification problem:\n",
     "1. We want to know which users are most similar to a test user, but\n",
@@ -52,7 +52,7 @@
     "\n",
     "Nolan Chart breakdown of users in our dataset:\n",
     "\n",
-    "<img src=\"report_imgs/newflows.png\" width=700/>\n",
+    "<img src=\"report_imgs/newflows.png\" width=\"700\"/>\n",
     "\n",
     "__NOTE:__ We were unable to find any good examples of populists for our dataset, and therefore would ideally use a different visualization convention if unbiased ground-truth data were similiarly available.\n",
     "\n",
@@ -91,7 +91,7 @@
     "\n",
     "Our feature matricies had __378,013 training records__, __67,088 testing records__, __65,376 unique features__ (same number of features in training and testing matricies), and looked something like this:\n",
     "\n",
-    "<img src=\"report_imgs/vecs2.png\" width=550/>"
+    "<img src=\"report_imgs/vecs2.png\" width=\"550\"/>"
    ]
   },
   {
@@ -106,7 +106,7 @@
     "\n",
     "Knowing that linear regressions vary much more as the number of features exceeds the number of data points, we applied Principal Component Analysis to bring our xtrain and xtest matricies down to __75 features__ (determined trialing with varying numbers of components). The improvement in results was significant:\n",
     "\n",
-    "<img src=\"report_imgs/PCA.png\" width=1300/>\n",
+    "<img src=\"report_imgs/PCA.png\" width=\"1300\"/>\n",
     "\n",
     "The PCA model (the winner) had an average error of 24.0324 units of distance on the Nolan Chart (the difference of roughly one quadrant) with a standard deviation of 5 units. "
    ]
@@ -199,11 +199,11 @@
     "\n",
     "Using [Vader sentiment analyser](https://www.nltk.org/_modules/nltk/sentiment/vader.html), we proceded as follows:\n",
     "\n",
-    "<img src=\"report_imgs/ldaflow.png\" width=1000/>\n",
+    "<img src=\"report_imgs/ldaflow.png\" width=\"1000\"/>\n",
     "\n",
     "Of course, we also ran a \"one vs. rest\" cross validation on an LDA model that did not use the sentiment approach detailed above:\n",
     "\n",
-    "<img src=\"report_imgs/lda_comparisons2.png\" width=1500/>\n",
+    "<img src=\"report_imgs/lda_comparisons2.png\" width=\"1500\"/>\n",
     "\n",
     "Cross validation results of the sentiment-enabled model had a higher mean error and estimation variance than the linear regression model, so we consider this approach a dead-end in its current state."
    ]
