--- a/Presentation.ipynb
+++ b/Presentation.ipynb
@@ -50,7 +50,9 @@
     "\n",
     "<img src=\"report_imgs/newflows.png\" width=\"700\"/>\n",
     "\n",
-    "We were not able to obtain as many training users as ideal due to the lack of politicians with Twitter accounts active enough to have more than 2,000 tweets since the 2016 presidential election (a limit in case of changes in political affiliation or party policy over time). Finding pundits was simple, but we limited ourselves since we did not see an unbiased way to draw model conclusions for pundit users (no ground-truth scores available).\n",
+    "We were not able to obtain as many training users as ideal due to the manual nature of extracting ground-truth information and the lack of politicians with Twitter accounts active enough to have more than 2,000 tweets since the 2016 presidential election (a limit in case of changes in political affiliation or party policy over time). \n",
+    "\n",
+    "Finding pundits was simple, but we limited ourselves since we did not see an unbiased way to draw model conclusions for pundit users (no ground-truth scores available). Model accuracy is primarily derived from creating a testing split from training users.\n",
     "\n",
     "__NOTE:__ We were unable to find any good examples of populists for our dataset, and therefore would ideally use [a different visualization convention](https://upload.wikimedia.org/wikipedia/commons/thumb/3/32/Political_Spectrum_Chart_NPOV.svg/380px-Political_Spectrum_Chart_NPOV.svg.png) if unbiased ground-truth data were similiarly available.\n",
     "\n",
@@ -58,26 +60,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['twitter', 'follow', 'trend', 'stop', 'read', 'favorit', 'politician']\n"
-     ]
-    }
-   ],
    "source": [
-    "from preproccess_tweets import Preprocessor\n",
-    "\n",
-    "test_tweet = \"\"\"RT @user: I really like using Twitter to follow #trends;\n",
-    "                I can't stop reading about my favorite politicians! \"\"\"\n",
-    "cleaned_tweet = Preprocessor().preprocess(test_tweet)\n",
-    "\n",
-    "print(cleaned_tweet)"
+    "<img src=\"report_imgs/preprocessing2.png\" width=\"600\"/>"
    ]
   },
   {
@@ -105,21 +91,28 @@
     "\n",
     "A [similiar problem](https://medium.com/linalgo/predict-political-bias-using-python-b8575eedef13) used logistic regression and clustering to predict the bias of newspaper headlines, but we used linear regression to get hard \"classifications\" of our training users' scores since we had access to ground-truth position data for our frame of reference.\n",
     "\n",
-    "Not having enough memory to run a regression on a roughly 65,000x65,000 matrix, we compared two routes:\n",
-    "1. Using Principal Component Analysis to reduce features (and hopefully reduce variance through having fewer features than records)\n",
-    "1. Summing up rows of the original feature matrix to keep all __65,276 features__ (but with only __129__ records)\n",
+    "With more features than records, we knew we would have to reduce our number of features. \n",
+    "\n",
+    "However, we saw two ways to continue:\n",
+    "1. Keep our feature matrix as-in and have each tweet be a data point\n",
+    "1. Reorganize our matrix to have each user's collection of tweets as a data point (__129 records__):\n",
     "<img src=\"report_imgs/vecs1.png\" width=\"700\"/>\n",
     "\n",
-    "__The PCA model (the unsuprising winner) used 75 components, had an average error of 0.2403 units of distance on the Nolan Chart (the difference of roughly one quadrant), and a standard deviation of 0.5 units.__\n",
+    "After finding ideal PCA component numbers for both setups, __the By-User matrix was the winner with an average error of 0.2403 units of distance on the Nolan Chart (the difference of roughly one quadrant) in a one-vs-rest cross-validation, and a standard deviation of 0.09 units.__ \n",
     "\n",
-    "<img src=\"report_imgs/PCA.png\" width=\"1300\"/>"
+    "We suspect tweets' character limits result in a single tweet being a poor representation of an overall user. However, we would need more training users to fully validate this finding.\n",
+    "\n",
+    "<img src=\"report_imgs/diff_matrix.png\" width=\"1300\"/>\n",
+    "\n",
+    "We decided __75 PCA components__ was ideal for the By-User matrix via trial and error:\n",
+    "<img src=\"report_imgs/pca_comps2.png\" width=\"700\"/>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our model's pundit estimations:"
+    "Our model's pundit estimations (\"Failed\" indicates model estimate >0.3 units from our personal estimates):"
    ]
   },
   {
@@ -142,52 +135,6 @@
     "import linear_regression_model\n",
     "%matplotlib inline\n",
     "linear_regression_model.main(print_results=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "### Attempt 2: Feature Engineering via Latent Dirichlet Allocation and Sentiment Data\n",
-    "\n",
-    "Unlike [similar projects](https://medium.com/analytics-vidhya/twitter-sentiment-analysis-for-the-2019-election-8f7d52af1887) [using Twitter data for sentiment analysis](https://ieeexplore.ieee.org/document/6897213), we decided that a person's political affiliation is a combination of:\n",
-    "\n",
-    "1. The topics they care about (or in this case, tweet about), and\n",
-    "1. Their sentiments (in this case, positive, negative, or neutral) towards those topics\n",
-    "\n",
-    "Using [Vader sentiment analyser](https://www.nltk.org/_modules/nltk/sentiment/vader.html), we proceded as follows:\n",
-    "\n",
-    "<img src=\"report_imgs/ldaflow.png\" width=\"1000\"/>\n",
-    "\n",
-    "Of course, we also ran a \"one vs. rest\" cross validation on an LDA model that did not use the sentiment approach detailed above:\n",
-    "\n",
-    "<img src=\"report_imgs/lda_comparisons2.png\" width=\"1500\"/>\n",
-    "\n",
-    "Cross validation results of the sentiment-enabled model had a higher mean error and estimation variance than the linear regression model, so we consider this approach a dead-end in its current state.\n",
-    "\n",
-    "__NOTE:__ We used fewer components in LDA than PCA since LDA is a supervised method that strives to maximize class separability. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# V: Conclusion\n",
-    "\n",
-    "Considerations:\n",
-    "\n",
-    "* Sentiment data may have not been the most accurate given sarcasm, passive agressiveness aimed at other users, etc.; sentiment models have even higher variances than LDA, possibily due to our \"one tweet = one topic\" simplification or LDA's mutlivariate normal prior distribution.\n",
-    "\n",
-    "* Topic-based models (Attempt 2) did not perform better when using PCA prior to LDA -- they had extremely high average per-user errors and our efforts might have been misguided.\n",
-    "\n",
-    "* We are skeptical about the scalability of the regression model in Attempt 1 due to our choice of the optimal number of PCA components selected.\n",
-    "\n",
-    "* Linear regression may be at a disadvantage if individual tweets are poor reflections of a user's entire Twitter timeline; our regression could possibly benefit from ensemble modeling using both of our feature matrix organizations.\n",
-    "\n",
-    "* A big concern for our approach is the possibility of users not tweeting as we would expect given a certain alignment, but we can only really counteract this by expanding our set of training users.\n",
-    "\n",
-    "* Regression to project users onto the chart was tricky since we lacked enough datapoints at the extremes of the chart to be able to place users towards the corners -- especially in the populists' quadrant."
    ]
   },
   {
@@ -230,12 +177,58 @@
    "source": [
     "from linear_regression_model import getRecommendations\n",
     "\n",
-    "getRecommendations('nprpolitics') # Liberal-oriented publication -- inaccurate model placement\n",
     "getRecommendations('Heritage') # Conservative-oriented publication -- recommendations are appropriate\n",
     "getRecommendations('reason') # Right/Libertarian-oriented publication -- recommendations are appropriate\n",
     "getRecommendations('lizmair') # Liz Mair, Libertarian campaign manager  -- recommendations are too liberal-focused\n",
     "getRecommendations('KellyannePolls') # Kellyanne Conway, counselor to Pres. Trump -- recommendations are appropriate\n",
     "getRecommendations('demsocialists') # Democratic Socialists of America's official Twitter -- inaccurate model placement"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### Attempt 2: Feature Engineering via Latent Dirichlet Allocation and Sentiment Data\n",
+    "\n",
+    "Unlike [similar projects](https://medium.com/analytics-vidhya/twitter-sentiment-analysis-for-the-2019-election-8f7d52af1887) [using Twitter data for sentiment analysis](https://ieeexplore.ieee.org/document/6897213), we decided that a person's political affiliation is a combination of:\n",
+    "\n",
+    "1. The topics they care about (or in this case, tweet about), and\n",
+    "1. Their sentiments (in this case, positive, negative, or neutral) towards those topics\n",
+    "\n",
+    "Using [Vader sentiment analyser](https://www.nltk.org/_modules/nltk/sentiment/vader.html), we proceded as follows:\n",
+    "\n",
+    "<img src=\"report_imgs/ldaflow.png\" width=\"1000\"/>\n",
+    "\n",
+    "Of course, we also ran a \"one vs. rest\" cross validation on an LDA model that did not use the sentiment approach detailed above:\n",
+    "\n",
+    "<img src=\"report_imgs/lda_comparisons2.png\" width=\"1500\"/>\n",
+    "\n",
+    "Cross validation results of the sentiment-enabled model had a higher mean error and estimation variance than the linear regression model, so we consider this approach a dead-end in its current state.\n",
+    "\n",
+    "__Our best LDA-based model used 8 topics had an average per-user error of .24 units and a standard deviation of .08 units. This performed about the same as the linear regression + PCA model.__\n",
+    "\n",
+    "__NOTE:__ We used fewer components in LDA than PCA since LDA is a supervised method that strives to maximize class separability -- more LDA components would feed overfitting. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# V: Conclusion\n",
+    "\n",
+    "Considerations:\n",
+    "* Our regression could possibly benefit from ensemble modeling using both of our feature matrix organizations; some left/liberal users had significantly better results with the By-Tweet feature matrix.\n",
+    "\n",
+    "* We are skeptical about the scalability of the regression model in Attempt 1 due to our choice of the optimal number of PCA components selected being based on our current dataset.\n",
+    "\n",
+    "* Regression to project users onto the chart was tricky since we lacked enough datapoints at the extremes of the chart to be able to place users towards the corners -- especially in the populists' quadrant.\n",
+    "\n",
+    "* Sentiment data may have not been the most accurate given sarcasm, passive agressiveness aimed at other users, etc.; sentiment models have even higher variances than LDA, possibily due to our \"one tweet = one topic\" simplification or LDA's mutlivariate normal prior distribution.\n",
+    "\n",
+    "* Topic-based models (Attempt 2) did not perform better when using Latent Semantic Analysis (LSA, or truncated SVD) -- they had extremely high average per-user errors and our efforts might have been misguided.\n",
+    "\n",
+    "* A big concern for our approach is the possibility of users not tweeting as we would expect given a certain alignment, but we can only really counteract this by expanding our set of training users."
    ]
   }
  ],
