--- a/Presentation.ipynb
+++ b/Presentation.ipynb
@@ -208,7 +208,10 @@
     "\n",
     "__Our best LDA-based model used 8 topics had an average per-user error of .24 units and a standard deviation of .08 units. This performed about the same as the linear regression + PCA model.__\n",
     "\n",
-    "__NOTE:__ We used fewer components in LDA than PCA since LDA is a supervised method that strives to maximize class separability -- more LDA components would feed overfitting. "
+    "__NOTE:__ We used fewer components in LDA than PCA since LDA is a supervised method that strives to maximize class separability -- more LDA components would feed overfitting. \n",
+    "\n",
+    "Some training users' results from using linear regression on the sentiment-blind LDA output:\n",
+    "<img src=\"report_imgs/linreg_gif.gif\" width=\"1500\"/>"
    ]
   },
   {
