update report notebook

--- a/Presentation.ipynb
+++ b/Presentation.ipynb
@@ -200,6 +200,11 @@
     "\n",
     "<img src=\"report_imgs/ldaflow.png\" width=\"1000\"/>\n",
     "\n",
+    "\n",
+    "An example of the results we fed into a linear regression to get Nolan scores:\n",
+    "\n",
+    "<img src=\"report_imgs/lda_sent_trump.png\" width=\"700\"/>\n",
+    "\n",
     "Of course, we also ran a \"one vs. rest\" cross validation on an LDA model that did not use the sentiment approach detailed above:\n",
     "\n",
     "<img src=\"report_imgs/lda_comparisons2.png\" width=\"1500\"/>\n",
