--- a/Presentation.ipynb
+++ b/Presentation.ipynb
@@ -49,6 +49,7 @@
     "Using a [Twitter API Python client](http://www.tweepy.org/) and an [SQLite](https://www.sqlite.org/index.html) database, we were able to save up to 3,200 tweets per user from this collection of politicians (training users) and pundits (testing users):\n",
     "\n",
     "<img src=\"report_imgs/newflows.png\" width=\"700\"/>\n",
+    "<img src=\"report_imgs/flows22.png\" width=\"700\"/>\n",
     "\n",
     "We were not able to obtain as many training users as ideal due to the manual nature of extracting ground-truth information and the lack of politicians with Twitter accounts active enough to have more than 2,000 tweets since the 2016 presidential election (a limit in case of changes in political affiliation or party policy over time). \n",
     "\n",
